--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactxss",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "React Smokescreen",
   "repository": {
     "type": "git",
@@ -12,11 +12,17 @@
     "url": "https://github.com/technion/reactxss/issues"
   },
   "homepage": "https://github.com/technion/reactxss#readme",
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-sourcemaps": "^1.6.0"
+  "dependencies": {
+    "@types/react": "^16.1.0",
+    "@types/react-dom": "^16.0.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "source-map-loader": "^0.2.3",
+    "ts-loader": "^4.1.0",
+    "tslint": "^5.9.1",
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.1",
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.0.13"
   }
 }
